--- a/HomeWork/HW4/public/index.html
+++ b/HomeWork/HW4/public/index.html
@@ -1,8 +1,5 @@
-<link rel="stylesheet" href="style.css">
-
 <h1>Personnel Management System</h1>
-
 <ol>
-    <li><a href="login.html">Login</a></li>
-    <li><a href="signup.html">SignUp</a></li>
+    <p><a href="/public/signup.html">SignUp</a></p>
+    <p><a href="/public/login.html">Login</a></p>
 </ol>
