--- a/HomeWork/HW4/public/login.html
+++ b/HomeWork/HW4/public/login.html
@@ -1,6 +1,14 @@
-<link rel="stylesheet" href="style.css">
-<form action="/people/login" method="post">
-    <input type="text" name="account" placeholder="Account" required><br>
-    <input type="password" name="password" placeholder="Password" required><br>
-    <input type="submit" value="login">
-</form>
+<form action="/people/login" method="post">   
+    <link rel="stylesheet" href="style.css">
+    <h1> Login </h1>
+    <div class="shadowbox-1">
+        <label>Name</label>
+        <br />
+        <input class="input" type="text" name="name" placeholder="name"/>
+        <label>Password</label>
+        <br />
+        <input class="input" type="password" name="password" placeholder="password"/>
+        <br />
+        <input class="button" type="submit" value="Login">
+    </div>
+</form> 
