--- a/HomeWork/HW4/public/signup.html
+++ b/HomeWork/HW4/public/signup.html
@@ -1,8 +1,20 @@
-<link rel="stylesheet" href="style.css">
 <form action="/people/signup" method="post">
-    <input type="text" name="name" placeholder="Name" required><br>
-    <input type="text" name="account" placeholder="Account" required><br>
-    <input type="password" name="password" placeholder="Password" required><br>
-    <input type="email" name="email" placeholder="e-mail" required><br>
-    <input type="submit" value="sign up">
+    <link rel="stylesheet" href="style.css">
+    <body>
+        <h1> SignUp </h1>
+        <div class="shadowbox">
+            <label>Name</label>
+            <br/>
+            <input class= "input" type="text" name="name" placeholder="name"/>
+            <br/>
+            <label>e-mail</label>
+            <br/>
+            <input class= "input" type="email" name="account" placeholder="account"/>
+            <br/>
+            <label>Password</label>
+            <input class= "input" type="password" name="password" placeholder="password"/>
+            <br/>
+            <input class= "button" type="submit" value="SignUp">
+        </div>
+    </body>
 </form>
